order-app/main/default/objects/OpportunityWon__e/OpportunityWon__e.object-meta.xml
<CustomObject>
    <label>Opportunity Won</label>
    <pluralLabel>Opportunity Wons</pluralLabel>
</CustomObject>