order-app/main/default/objects/OpportunityWon__e/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>