order-app/main/default/objects/OpportunityWon__e/fields/CustomerCode__c.field-meta.xml
<CustomField>
    <fullName>CustomerCode__c</fullName>
    <label>Customer Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>