order-app/main/default/objects/OpportunityWon__e/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <label>Customer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>