order-app/main/default/objects/OpportunityWon__e/fields/TotalValue__c.field-meta.xml
<CustomField>
    <fullName>TotalValue__c</fullName>
    <label>Total Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>